--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.11.0",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
+    "@types/node": "^13.13.0",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "@vue/cli-plugin-babel": "~4.2.0",
@@ -26,13 +30,16 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.1",
     "@vue/test-utils": "1.0.0-beta.31",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.1.2",
     "node-sass": "^4.12.0",
+    "nodemon": "^2.0.3",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
-    "typescript": "~3.7.5",
+    "ts-node": "^8.8.2",
+    "typescript": "^3.7.5",
     "vue-template-compiler": "^2.6.11"
   }
 }
