--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "tests/**/*.tsx", "src/services/index.js", "src/services/SmartCheckWinStrategy.js"
   ],
   "exclude": [
     "node_modules"
