--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "cypress": "^4.4.0",
     "vue": "^2.6.11",
     "vuex": "^3.1.2"
   },
